--- a/main.css
+++ b/main.css
@@ -38,6 +38,19 @@ header #logo span {
   font-family: 'Suez One', serif;
 }
 
+@media (min-width: 300px) {
+  #logo {
+    float: left;
+    width: 100%;
+    font-size: 10px;
+  }
+
+  #about {
+    float: right;
+    width: 67%;
+  }
+}
+
 @media (min-width: 701px) {
   #logo {
     float: left;
