--- a/main.css
+++ b/main.css
@@ -54,6 +54,7 @@ header #logo span {
 @media (max-width: 700px) {
   #logo {
     margin-top: 15px;
+    text-align: center;
     width: 100%;
     font-size: 0.9em;
   }
